--- a/loginPage.html
+++ b/loginPage.html
@@ -7,6 +7,15 @@
     <title> صفحة تسجيل الدخول </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            background: url('Images/catmain.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+
+        }
+    </style>
 </head>
 
 <body>
@@ -19,14 +28,15 @@
 
 
         <div class="logIn-Form">
-            <form method="get" action="">
+            <form id="loginForm" method="get" action="">
                 <!--هنا أضع وحدة من ال methods-->
                 <!---->
                 <div class="inputBox">
 
 
                     <label>
-                        <input text="text" placeholder="البريد الإلكتروني" required>
+                        <input id="email" type="text" placeholder="البريد الإلكتروني"> <!--Remove require-->
+
                         <div class="icons-User-Lock"> <i class='bx bxs-user'></i></div>
                     </label>
                 </div>
@@ -34,7 +44,7 @@
 
                 <div class="inputBox">
                     <label>
-                        <input text="text" placeholder="كلمة المرور" required>
+                        <input id="password" type="text" placeholder="كلمة المرور"> <!--Remove require-->
                         <div class="icons-User-Lock"> <i class='bx bxs-lock-alt'></i> </div>
                     </label>
                 </div>
@@ -48,13 +58,14 @@
 
 
                 <div class="logIn-Button">
-                    <button type="submit" class="btn">دخول</button>
+                    <button type="submit" class="btn" onclick="validateInput">دخول</button>
                 </div>
 
+                <!--Link login In page with create account page in case user do not have an account-->
                 <div class="createAccpount-page">
                     <p>
                         ألا تمتلك حساب؟
-                        <a href="#"> تسجيل</a>
+                        <a href="creatAccount.html"> تسجيل</a>
                     </p>
                 </div>
 
@@ -63,18 +74,32 @@
         </div>
     </div>
 
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            const email = document.getElementById('email');
-            const password = document.getElementById('password');
-
-            if (!email.value.trim() || !password.value.trim()) {
-                event.preventDefault(); // Prevent form submission if fields are empty
-                alert('الرجاء إدخال البريد الإلكتروني وكلمة المرور');
-            }
-        });
-    </script>
 
 </body>
+
+<script>
+    /* This Line of code will check if the user insert both field email & paswoed */
+
+    /*
+        const email = document.getElementById('email');
+        const password = document.getElementById('password');
+    
+        if (!email.value.trim() || !password.value.trim()) {
+            alert('الرجاء إدخال البريد الإلكتروني وكلمة المرور');
+        }
+    */
+    function validateInput() {
+        const email = document.getElementById('email');
+        const password = document.getElementById('password');
+
+        if (!email.value.trim() || !password.value.trim()) {
+            alert('الرجاء إدخال البريد الإلكتروني وكلمة المرور');
+        }
+    }
+    window.addEventListener('click',validateInput, false);
+
+
+</script>
+
 
 </html>
