--- a/contactUs.html
+++ b/contactUs.html
@@ -61,7 +61,7 @@
           <a href="https://twitter.com/?lang=ar"><img id="xx" src="X_icon.svg.png"></a>
         </div>
         <div>
-          <a href="https://www.snapchat.com/ar"><img id="snap" src="images.png"></a>
+          <a href="https://www.snapchat.com/ar"><img id="snap" src="snaplogo.png"></a>
         </div>
       </div>
       <p id="myp"></p>
