--- a/homePage.html
+++ b/homePage.html
@@ -30,7 +30,7 @@
 </nav>
 
 <div class="icons">
-    <a href="#" class="fas fa-heart"></a>
+    <a href="favoritePage.html" class="fas fa-heart"></a>
     <a href="#" class="fas fa-user"></a>
 </div>
 
