--- a/homePage.html
+++ b/homePage.html
@@ -17,7 +17,7 @@
 <header>
 
     <input type="checkbox" name="" id="toggler">
-    <label for="toggler" class="fas fa-bars"></label>
+    
 
 <a href="#" class="logo"> مأوى المحبة<span> </span></a>
 
@@ -29,10 +29,13 @@
 
 </nav>
 
-<div class="icons">
-    <a href="favoritePage.html" class="fas fa-heart"></a>
-    <a href="#" class="fas fa-user"></a>
-</div>
+    <div class="imageIcon">
+    <img src="Images/heart.png" alt="" class="heartIcon">
+    </div>
+
+    <div class="imageIcon">
+    <img src="Images/user.png"  alt="" class="heartIcon">
+    </div>
 
 </header>
 
