--- a/homePage.html
+++ b/homePage.html
@@ -29,13 +29,17 @@
 
 </nav>
 
+<div class="icons">
+
     <div class="imageIcon">
-    <img src="Images/heart.png" alt="" class="heartIcon">
+    <img src="Images/heart.png" alt="" style="width: 20px; ">
     </div>
 
     <div class="imageIcon">
-    <img src="Images/user.png"  alt="" class="heartIcon">
+    <img src="Images/user.png"  alt="" style="width: 20px;" >
     </div>
+
+</div>
 
 </header>
 
