--- a/homePage.html
+++ b/homePage.html
@@ -32,7 +32,9 @@
 <div class="icons">
 
     <div class="imageIcon">
+    <a href="favoritePage.html">
     <img src="Images/heart.png" alt="" style="width: 20px; ">
+    </a>
     </div>
 
     <div class="imageIcon">
