--- a/contactUs.html
+++ b/contactUs.html
@@ -9,30 +9,39 @@
 </head>
 
 <body>
-  <!--header section statrt-->
+  <!--header section start-->
   <header>
 
     <input type="checkbox" name="" id="toggler">
     <label for="toggler" class="fas fa-bars"></label>
 
-    <a href="#" class="logo"> مأوى المحبة<span> </span></a>
+    <a href="#" class="logo"> مأوى المحبة<span></span></a>
 
-    <nav class="navbar">
-      <a href="#home">الرئيسية</a>
-      <a href="#about">من نحن</a>
-      <a href="#products">الحيوانات المنقذة</a>
-      <a href="#contact"> تواصل معنا</a>
-
+    <nav class="navbar"> 
+        <a href="homePage.html">الرئيسية</a>
+        <a href="homePage.html#about">من نحن</a>
+        <a href="cartPage.html">  حيوانات للتبني </a>
+        <a href="orderPage.html">ابدأ الطلب  </a>
+        <a href="contactUs.html"> تواصل معنا</a>
     </nav>
 
     <div class="icons">
-      <a href="#" class="fas fa-heart"></a>
-      <a href="#" class="fas fa-user"></a>
+
+        <div class="imageIcon">
+        <a href="favoritePage.html">
+        <img src="Images/heart.png" alt="" style="width: 20px; ">
+        </a>
+        </div>
+    
+        <div class="imageIcon">
+        <img src="Images/user.png"  alt="" style="width: 20px;" >
+        </div>
+    
     </div>
 
-  </header>
+</header>
+<!--header section end-->
 
-  <!--header section end-->
   <div class="container">
     <form id="form">
       <h3>تواصل معنا </h3>
