--- a/cartPage.html
+++ b/cartPage.html
@@ -11,11 +11,20 @@
     
 </head>
 <body>
-   <div class=""><!--here 12:30-->
+
+
+   <div class="">
 
     <div class="containerCart">
         <header>
             <div class="logo"> قائمة الحيوانات المنقذة </div>
+            <nav class="navbar"> 
+                <a href="homePage.html">الرئيسية</a>
+                <a href="homePage.html#about">من نحن</a>
+                <a href="cartPage.html">  حيوانات للتبني </a>
+                <a href="orderPage.html">ابدأ الطلب  </a>
+                <a href="contactUs.html"> تواصل معنا</a>
+            </nav>
             <div class="icon-cart">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" >
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
@@ -40,7 +49,7 @@
         </div>
         <div class="btn">
             <button class="close">اغلاق</button>
-            <button class="checkOut">الدفع</button>
+            <a href="orderPage.html"><button class="checkOut" style="width: 60px; height: 40px;">الدفع</button></a>
         </div>
 
     </div>
