--- a/homePage.html
+++ b/homePage.html
@@ -16,17 +16,20 @@
     <!--header section statrt-->
 <header>
 
+    <a href="favoritePage.html">
     <input type="checkbox" name="" id="toggler">
-    
+    </a>
+  
 
 <a href="#" class="logo"> مأوى المحبة<span> </span></a>
 
-<nav class="navbar"> 
-    <a href="#home">الرئيسية</a>
-    <a href="#about">من نحن</a>
-    <a href="#products">الحيوانات المنقذة</a>
-    <a href="#contact"> تواصل معنا</a>
 
+<nav class="navbar"> 
+    <a href="homePage.html">الرئيسية</a>
+    <a href="homePage.html#about">من نحن</a>
+    <a href="cartPage.html">  حيوانات للتبني </a>
+    <a href="orderPage.html">ابدأ الطلب  </a>
+    <a href="contactUs.html"> تواصل معنا</a>
 </nav>
 
 <div class="icons">
@@ -68,7 +71,7 @@
     <div class="row">
 
         <div class="video-container">
-            <video src="img/cat vid.mp4" loop autoplay muted ></video>
+            <video src="Images/cat vid.mp4" loop autoplay muted ></video>
             <h3>نبحث عن بيت دافىء لهم</h3>
         </div>
         
@@ -89,7 +92,7 @@
 <section class="icons-container">
 
     <div class="icons">
-        <img src="img/animal.png" alt="">
+        <img src="Images/animal.png" alt="">
         <div class="info">
             <h3>نقدم لهم افضل عناية</h3>
             <span>سعادتهم غايتنا</span>
@@ -97,7 +100,7 @@
     </div>
 
     <div class="icons">
-        <img src="img/delivery-truck.png" alt="">
+        <img src="Images/delivery-truck.png" alt="">
         <div class="info">
             <h3>وجود خدمة توصيل</h3>
             <span>او استلامهم من المقر اذا احببت</span>
@@ -105,7 +108,7 @@
     </div>
 
     <div class="icons">
-        <img src="img/pet-house.png" alt="">
+        <img src="Images/pet-house.png" alt="">
         <div class="info">
             <h3>لا توجد رسوم للتبني</h3>
             <span>فقط فحص بيئتهم المستقبلية</span>
@@ -113,7 +116,7 @@
     </div>
 
     <div class="icons">
-        <img src="img/stethoscope.png" alt="">
+        <img src="Images/stethoscope.png" alt="">
         <div class="info">
             <h3>التأكد دائما من حالتهم الصحية</h3>
             <span>لوجود طاقم بيطريين</span>
@@ -124,25 +127,6 @@
 </section>
 <!--icon section end-->
 
-<!--contact section start-->
-<section class="contact" id="contact">
-    <h1 class="heading"> تواصل<span>  معنا </span></h1>
-
-    <div class="row">
-        <form action="">
-            <input type="text" placeholder="name" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="number" class="box">
-            <textarea name="" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="ارسال" class="btn"> 
-        </form>
-
-        <div class="image">
-            <img src="img/paw.jpg" alt="">
-        </div>
-    </div>
-</section>
-    <!--contact section end-->
     <!--footer section start-->
 <section class="footer">
     <div class="box-container">
@@ -161,7 +145,7 @@
             <a href="#">+758-783-7502</a>
             <a href="#">domain@hotmail.com</a>
             <a href="#">الرياض، المملكة العربية السعودية- حي حطين<a>
-            <img src="img/payment.jpg" alt="" >
+            <img src="Images/payment.jpg" alt="" >
         </div>
 
     </div>
