--- a/homePage.html
+++ b/homePage.html
@@ -40,9 +40,13 @@
     </a>
     </div>
 
+
     <div class="imageIcon">
+    <a href="userInfo.html"></a>
     <img src="Images/user.png"  alt="" style="width: 20px;" >
+    </a>
     </div>
+
 
 </div>
 
