--- a/loginPage.html
+++ b/loginPage.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="360"> <!-- لجعل المتصفح يحدّث الصفحة ذاتيًا كل ٣٦٠ ثانية-->
-    <meta charset="UTF-8"> <!-- لجعل صفحة الموقع تدع اللغة العربية-->
-    <title> صفحة تسجيل الدخول </title>
+    <meta http-equiv="refresh" content="360">
+    <meta charset="UTF-8">
+    <title>صفحة تسجيل الدخول</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
@@ -13,8 +13,116 @@
             background: url('Images/catmain.jpg');
             background-repeat: no-repeat;
             background-size: cover;
-
         }
+        
+        /*بداية تصميم loginPage.html*/
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-color: #ffebeb;
+        }
+
+        .logIn-Wrapprr {
+            width: 420px;
+            background-color: transparent;
+            border: 2px solid rgba(255, 255, 255, .2);
+            backdrop-filter: blur(20px);
+            box-shadow: 0 0 10px rgba(0, 0, blue0, .2);
+            color: #000;
+            border-radius: 10px;
+            padding: 30px 40px;
+        }
+
+        .logIng-Title {
+            font-size: 36px;
+            text-align: center;
+        }
+
+        .inputBox {
+            position: relative;
+            width: 100%;
+            height: 50px;
+            margin: 30px 0;
+        }
+
+        .inputBox input {
+            text-align: right;
+            width: 100%;
+            height: 100%;
+            background: transparent;
+            border: none;
+            outline: none;
+            border: 2px solid rgba(255, 255, 255, 2);
+            border-radius: 40px;
+            font-size: 16px;
+            color: #000;
+            padding: 20px 45px 20px 20px;
+        }
+
+        .inputBox input::placeholder {
+            color: #f7f5f2;
+        }
+
+        .inputBox i {
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-size: 20px;
+        }
+
+        .icons-User-Lock {
+            color: #e8cdcc;
+        }
+
+        .rememeber-forgot {
+            display: flex;
+            justify-content: space-between;
+            font-size: 14.5px;
+            margin: -15px 0 15px;
+        }
+
+        .rememeber-forgot label input {
+            accent-color: #fff;
+            margin-right: 3px;
+        }
+
+        .rememeber-forgot a {
+            color: #000;
+            text-decoration: none;
+        }
+
+        .rememeber-forgot a:hover {
+            text-decoration: underline;
+        }
+
+        .logIn-Wrapprr .btn {
+            width: 100%;
+            height: 45px;
+            background-color: #fff;
+            border: none;
+            outline: none;
+            border-radius: 40px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, -1);
+            cursor: pointer;
+            font-size: 16px;
+            color: #000;
+            font-weight: 600;
+        }
+
+        /*نهاية تصميم loginPage.html*/
     </style>
 </head>
 
@@ -26,72 +134,58 @@
             <br>
         </div>
 
-
         <div class="logIn-Form">
-            <form id="loginForm" method="get" action="">
+            <form id="loginForm">
                 <!--هنا أضع وحدة من ال methods-->
                 <!---->
                 <div class="inputBox">
-
-
                     <label>
-                        <input id="email" type="text" placeholder="البريد الإلكتروني"> <!--Remove require-->
-
+                        <input id="email" type="text" placeholder="البريد الإلكتروني">
                         <div class="icons-User-Lock"> <i class='bx bxs-user'></i></div>
                     </label>
                 </div>
 
-
                 <div class="inputBox">
                     <label>
-                        <input id="password" type="text" placeholder="كلمة المرور"> <!--Remove require-->
+                        <input id="password" type="text" placeholder="كلمة المرور">
                         <div class="icons-User-Lock"> <i class='bx bxs-lock-alt'></i> </div>
                     </label>
                 </div>
 
-
-
-                <div class="rememeber-forgot"> <a href="#"> هل نسيت كلمة المرور؟</a>
+                <div class="rememeber-forgot"> <a href="#">هل نسيت كلمة المرور؟</a>
                     <label> <input type="checkbox"> تذكرني</label>
                 </div>
 
-
-
                 <div class="logIn-Button">
-                    <button type="submit" class="btn" >دخول</button>
+                    <button type="submit" class="btn">دخول</button>
                 </div>
 
                 <!--Link login In page with create account page in case user do not have an account-->
                 <div class="createAccpount-page">
                     <p>
                         ألا تمتلك حساب؟
-                        <a href="createAccount.html"> تسجيل</a>
+                        <a href="createAccount.html">تسجيل</a>
                     </p>
                 </div>
-
-
             </form>
         </div>
     </div>
 
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the default form submission
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value.trim();
 
+            if (!email || !password) {
+                alert('الرجاء إدخال البريد الإلكتروني وكلمة المرور');
+                return;
+            }
+
+            // Redirect to createAccount.html
+            window.location.href = 'homePage.html';
+        });
+    </script>
 </body>
-
-<script>
-    /* This Line of code will check if the user insert both field email & paswoed */
-
-    function validateInput() {
-        const email = document.getElementById('email');
-        const password = document.getElementById('password');
-
-        if (!email.value.trim() || !password.value.trim()) {
-            alert('الرجاء إدخال البريد الإلكتروني وكلمة المرور');
-        }
-    }
-    window.addEventListener('submit',validateInput, false);
-
-
-</script>
-
 
 </html>
