--- a/contactUs.html
+++ b/contactUs.html
@@ -7,7 +7,89 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<style>
+  /* contactUsبدايه تصميم*/
+body{
+    background-color: #ffebeb
+}
+.container{
+    margin: auto;
+    margin-top: 20%;
+    background-color: #ffebeb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+form{
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+    text-align: center;
+}
+form h3{
+    color: #555;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+form input,form textarea{
+    border: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 16px;
+}
+form button{
+    padding:15px;
+    background-color: #ffebeb;
+    font-size: 18px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 150px;
+    margin: 20px auto 0;
+    border-radius: 30px;
+}
+#insta{
+    border: 1px solid hidden;
+    border-radius: 50%;
+    width:60px;
+    float:left;
+    margin-left:33% ;
+    margin-top: 20px;
+    margin-right: 30px;
+}
+#xx{
+    border: 1px solid hidden;
+    border-radius: 50%;
+    width:60px;
+     float:left;
+    margin-top: 20px;
+    margin-right: 30px;
+}
+#snap{
+    border: 1px solid hidden;
+    border-radius: 50%;
+    width:60px ;
+    float: left;
+    margin-top: 20px;
+    margin-right: 30px;
+    
+}
+.error{
+    color: #e91111;
+    display: block;
+    padding: 10px;
+   
+}
+/*contactUsنهايه تصميم */
 
+
+</style>
 <body>
   <!--header section start-->
   <header>
