--- a/creatAccount.html
+++ b/creatAccount.html
@@ -201,7 +201,7 @@ body
             
             <div class="myinputBox">
                 <lable>
-                    <input id="Name2" type="text" placeholder=" الأسم اأخير  *"  >
+                    <input id="Name2" type="text" placeholder=" الأسم الاخير  *"  >
                     <p id="p2"></p>
                     <div class="icons-User-Lock"> <i class='bx bxs-user'></i></div>
                 </lable>
