--- a/creatAccount.html
+++ b/creatAccount.html
@@ -18,15 +18,14 @@
 }
 body 
 {
+    background: url('Images/catmain.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-image: url("catmain.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-color: #ffebeb; /* البديل لو كانت الصورة غير متاحة لأي سبب كان*/
+    
 }
 .icons-user-Lock
 {
