--- a/orderPage.html
+++ b/orderPage.html
@@ -13,7 +13,7 @@
 <body>
     <header>
 
-        <div class="logo"> قائمة الحيوانات المنقذة </div>
+        <div class="logo"> قائمة الدفع</div>
         <nav class="navbar"> 
             <a href="homePage.html">الرئيسية</a>
             <a href="homePage.html#about">من نحن</a>
