--- a/contactUs.html
+++ b/contactUs.html
@@ -147,13 +147,13 @@ form button{
       <button id="btn" type="submit">ارسال</button>
       <div>
         <div>
-          <a href="https://www.instagram.com/"><img id="insta" src="instagram-icon.png"></a>
+          <a href="https://www.instagram.com/"><img id="insta" src="Images/instagram-icon.png"></a>
         </div>
         <div>
-          <a href="https://twitter.com/?lang=ar"><img id="xx" src="X_icon.svg.png"></a>
+          <a href="https://twitter.com/?lang=ar"><img id="xx" src="Images/X_icon.svg.png"></a>
         </div>
         <div>
-          <a href="https://www.snapchat.com/ar"><img id="snap" src="snaplogo.png"></a>
+          <a href="https://www.snapchat.com/ar"><img id="snap" src="Images/snaplogo.png"></a>
         </div>
       </div>
       <p id="myp"></p>
