--- a/cartPage.html
+++ b/cartPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,53 +9,59 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
+
 <body>
 
 
-   <div class="">
+    <div class="">
 
-    <div class="containerCart">
-        <header>
-            <div class="logo"> قائمة الحيوانات المنقذة </div>
-            <nav class="navbar"> 
-                <a href="homePage.html">الرئيسية</a>
-                <a href="homePage.html#about">من نحن</a>
-                <a href="cartPage.html">  حيوانات للتبني </a>
-                <a href="orderPage.html">ابدأ الطلب  </a>
-                <a href="contactUs.html"> تواصل معنا</a>
-            </nav>
-            <div class="icon-cart">
-                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" >
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
-                  </svg>   
-                  <span> 0 </span>     
-            </div>  
-        </header> 
+        <div class="containerCart">
+            <header>
+                <div class="logo"> قائمة الحيوانات المنقذة </div>
+                <nav class="navbar">
+                    <a href="homePage.html">الرئيسية</a>
+                    <a href="homePage.html#about">من نحن</a>
+                    <a href="cartPage.html"> حيوانات للتبني </a>
+                    <a href="orderPage.html">ابدأ الطلب </a>
+                    <a href="contactUs.html"> تواصل معنا</a>
+                </nav>
+                <div class="icon-cart">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+                        viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312" />
+                    </svg>
+                    <span> 0 </span>
+                </div>
+            </header>
 
-        <div class="listProduct">
-            <div class="item">
-                <img src="Images/cat1.jpg" alt="">
-                <h2>القطةاورانج</h2>
-                <div class="detailsProduct"><h6> الجنس:انثى <br> العمر: سنتين<br>التعقيم: نعم</h6></div>
-                <button class="addCart"> اضف للسلة </button>
+            <div class="listProduct">
+                <div class="item">
+                    <img src="Images/cat1.jpg" alt="">
+                    <h2>القطةاورانج</h2>
+                    <div class="detailsProduct">
+                        <h6> الجنس:انثى <br> العمر: سنتين<br>التعقيم: نعم</h6>
+                    </div>
+                    <button class="addCart"> اضف للسلة </button>
+                </div>
             </div>
         </div>
+
+        <div class="cartTab">
+            <h1> السلة </h1>
+            <div class="listCart">
+            </div>
+            <div class="btn">
+                <button class="close">اغلاق</button>
+                <a href="orderPage.html"><button class="checkOut" style="width: 60px; height: 40px;">الدفع</button></a>
+            </div>
+
+        </div>
     </div>
 
-    <div class="cartTab">
-        <h1> السلة </h1>
-        <div class="listCart">
-        </div>
-        <div class="btn">
-            <button class="close">اغلاق</button>
-            <a href="orderPage.html"><button class="checkOut" style="width: 60px; height: 40px;">الدفع</button></a>
-        </div>
-
-    </div>
-   </div> 
-
-<script src="cart.js"></script>
+    <script src="cart.js"></script>
 </body>
+
 </html>
